# abliterix

./: .gitignore  CONTRIBUTING.md  README.md  deploy_gemma4_31b.sh  deploy_minimax_m25.sh  deploy_minimax_m25_vllm.sh  deploy_qwen35_397b_bf16.sh  deploy_qwen35_397b_fp8.sh  deploy_step3p5_flash.sh  pyproject.toml  test_pca_ot.py  test_pca_ot_hooks.py  test_pca_ot_weight_baking.py
.github/workflows/: ci.yml  publish.yml
artifacts/: llama3_rr_trial40_validation.txt  mistral_rr_trial39_validation.txt
benchmarks/: CONTRIBUTING.md  SPEC.md
configs/: aya_expanse_32b.toml  baichuan2_13b.toml  baichuan2_7b.toml  chatglm3_6b.toml  codestral_22b.toml  command_r_35b.toml  command_r_plus_104b_4bit.toml  dbrx_132b_4bit.toml  deepseek_r1_distill_14b.toml  deepseek_r1_distill_14b_4bit.toml  deepseek_r1_distill_32b.toml  deepseek_r1_distill_32b_4bit.toml  deepseek_r1_distill_7b.toml  deepseek_v2.5_4bit.toml  deepseek_v2_lite.toml  devstral_24b.toml  exaone3.5_2.4b.toml  exaone3.5_32b.toml  exaone3.5_7.8b.toml  falcon2_11b.toml  falcon3_10b.toml  falcon3_1b.toml  falcon3_7b.toml  gemma2_27b.toml  gemma2_2b.toml  gemma2_9b.toml  gemma2_9b_fp8.toml  gemma3_12b.toml  gemma3_1b.toml  gemma3_27b.toml  gemma3_27b_4bit.toml  gemma3_4b.toml  gemma4_26b_a4b.toml  gemma4_31b.toml  gemma4_31b_v7_cosmic.toml  gemma4_31b_v7_direct.toml  gemma4_31b_v7_multi_ot.toml  gemma4_31b_v7_quick.toml  gemma4_31b_v7_sra.toml  gemma4_31b_v8_direct.toml  (+123 more)
docs/: PCA_OT_GUIDE.md  architecture.md  broken_defenses.md  configuration.md  datasets.md  evaluation.md  methods.md  moe.md  references.md  runpod-deployment.md  runpod-quickstart.md
examples/: pca_ot_basic_usage.py
quick_start/: README.md  deploy_qwen36_27b.sh  deploy_qwen36_27b_v2.sh  deploy_qwen36_27b_v3.sh  deploy_qwen36_27b_v4.sh  setup_remote.sh  write_env.sh
scripts/: README.md  ab_test.py  analyze_sweep.py  benchmark.py  benchmark_optimizations.py  build_leaderboard.py  deeprefusal_attenuate.py  deploy_deeprefusal.sh  discover_model.py  eval_external_model.py  eval_model.py  export_model.py  generate_configs.py  generate_prompts.py  honest_bench.py  patch_all_final.py  probe_harmful_model.py  push_card_gemma4.py  push_model_card.py  run_abliterix.py  run_sweep.py  sync_gemma4_tokenizer.py  test_trial.py  update_model_cards.py  upload_model.py  verify_gemma4_26b_a4b.py  verify_gemma4_31b.py  verify_gemma4_e4b.py  verify_glm47_flash.py  verify_minimax_m25.py  verify_qwen35_397b_fp8.py
src/abliterix/: analysis.py  cli.py  data.py  interactive.py  iterative.py  optimizer.py  pca_ot_hooks.py  pca_ot_weight_baking.py  scriptlib.py  settings.py  types.py  vectors.py
src/abliterix/core/: engine.py  sglang_backend.py  speculators_backend.py  steering.py  vllm_backend.py  vllm_hidden_states.py
src/abliterix/eval/: detector.py  scorer.py
src/prometheus/: cli.py
src/prometheus/core/: engine.py
src/prometheus/eval/: detector.py
tests/: conftest.py  test_cli.py  test_custom_judge.py  test_data.py  test_detector.py  test_integration.py  test_iterative.py  test_min_new_tokens.py  test_minimax_judge.py  test_scorer.py  test_scriptlib.py  test_settings.py  test_steering.py  test_types.py  test_util.py  test_vectors.py
